# typescript-react-tauri-page-search-demo

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.css  App.tsx  PageSearch.css  PageSearch.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/PageSearch/: PageSearch.css  PageSearch.tsx  styles.ts
