[package]
name = "typescript-react-tauri-page-search-demo"
version = "0.1.0"
description = "Page search demo built with Tauri"
edition = "2021"

[lib]
name = "typescript_react_tauri_page_search_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
